@@ -1,21 +1,21 @@
 %li[assigned]{ highlightable(dom_id(assigned, :tools)) }
-  .longstrip= link_to(assigned.assignee.full_name, "mailto:" + assigned.assignee.email)
+  .strip Other
   %div
     .tools{ hidden, :id => dom_id(assigned, :tools) }
       %small
         = link_to("Edit", task_path(assigned)) << " | "
         = link_to_remote("Delete!", :url => task_path(assigned), :method => :delete, :before => visual_effect(:highlight, dom_id(assigned), :startcolor => "#afeeee"))
       &nbsp;
-    = assigned.name
-    %dt
+    = link_to(assigned.assignee.full_name, "mailto:" + assigned.assignee.email) << ": " << assigned.name << " &ndash; "
+    %tt
       - if assigned.due_at.nil?
-        Due sometime soon.
+        due sometime soon.
       - elsif assigned.due_at.utc == Task::ASAP
-        Due now!
+        due now!
       - elsif assigned.due_at < Date.today
         %span.warn= distance_of_time_in_words(assigned.due_at, Date.today) << " late, was due on #{assigned.due_at.strftime('%b %e')}"
       - elsif assigned.due_at > Date.today
-        = "Due in " << distance_of_time_in_words(Date.today, assigned.due_at)
+        = "due in " << distance_of_time_in_words(Date.today, assigned.due_at)
       - else
-        %span.cool Due today!
+        %span.cool due today!
       
