@@ -8,6 +8,7 @@
       %small
         = link_to_remote("Delete!", :url => task_path(completed), :method => :delete, :before => visual_effect(:highlight, dom_id(completed), :startcolor => "#afeeee"))
     %strike= completed.name
-    %dt
-      %span.cool= "Completed " << distance_of_time_in_words(completed.completed_at, Date.today) << " ago"
+    &ndash;
+    %tt
+      %span.cool= "completed " << distance_of_time_in_words(completed.completed_at, Date.today) << " ago"
       
