@@ -2,23 +2,24 @@
   - if pending.category
     .strip{:class => pending.category}= Setting.task_category[pending.category.intern]
   - else
-    .strip &nbsp;
+    .strip Other
   %div
     .tools{ hidden, :id => dom_id(pending, :tools) }
       %small
         = link_to("Edit", task_path(pending)) << " | "
         = link_to_remote("Delete!", :url => task_path(pending), :method => :delete, :before => visual_effect(:highlight, dom_id(pending), :startcolor => "#afeeee"))
       &nbsp;
-    = pending.name
-    %dt
+    <input type="checkbox">
+    = pending.name << " &ndash; "
+    %tt
       - if pending.due_at.nil?
-        Due sometime soon.
+        due sometime soon.
       - elsif pending.due_at.utc == Task::ASAP
-        Due now!
+        due now!
       - elsif pending.due_at < Date.today
         %span.warn= distance_of_time_in_words(pending.due_at, Date.today) << " late, was due on #{pending.due_at.strftime('%b %e')}"
       - elsif pending.due_at > Date.today
-        = "Due in " << distance_of_time_in_words(Date.today, pending.due_at)
+        = "due in " << distance_of_time_in_words(Date.today, pending.due_at)
       - else
-        %span.cool Due today!
+        %span.cool due today!
       
