@@ -6,7 +6,12 @@
         %div{:style => "float:right;"}
           = @task_total[key]
         = task_due_date_checbox(@view, key, @task_total[key]) << " " << value
-
+  - else # @view == "completed"
+    - Setting.task_completed.each do |value, key|
+      .check_box{:style => "border-bottom: 1px silver dotted;"}
+        %div{:style => "float:right;"}
+          = @task_total[key]
+        = task_due_date_checbox(@view, key, @task_total[key]) << " " << value
   .check_box
     %div{:style => "float:right;"}
       %b= @task_total[:all]
