@@ -7,9 +7,9 @@
 .title Tasks
 = render :partial => "create"
 
-.list#list
+.log#log
   - unless @tasks.values.flatten.empty?
     - Setting.task_due_date.each do |value, key|
       = render :partial => "list", :locals => { :key => key, :value => value }
   - else
-    %div== You don't have any pending tasks.
+    %div You don't have any pending tasks.
